# zhidu

./: .env.example  .gitignore  .npmrc  .prettierignore  CONTRIBUTING.md  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.github/workflows/: ci.yml
apps/desktop/: package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  next.config.ts  package.json  tsconfig.json
apps/web/public/: manifest.webmanifest  offline.html  sw.js
apps/web/src/: middleware.ts
apps/web/src/app/: error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/app/(auth)/: error.tsx  layout.tsx
apps/web/src/app/(dashboard)/: error.tsx  layout.tsx  loading.tsx
apps/web/src/app/forgot-password/: page.tsx
apps/web/src/app/offline/: page.tsx
apps/web/src/components/: NotificationBell.tsx
apps/web/src/data/: planning-templates.ts  skill-tree-templates.ts
apps/web/src/lib/: auth-utils.ts  rate-limit.ts  sse-parser.ts
apps/web/src/stores/: auth-store.ts  chat-store.ts
docs/: DATA_LAYER_PLAN.md  PHASE_9_PRD.md
supabase/: config.toml
supabase/migrations/: 20260625120000_initial_schema.sql  20260625_initial_schema.sql  20260706000000_create_temp_edits_bucket.sql  20260706100000_billing_and_quota_system.sql  20260707000000_enterprise_modules.sql  20260707180000_storage_rls_policies.sql  20260710000000_portfolio_investment.sql  20260713100000_fund_flow_infrastructure.sql  20260714100000_academic_radar.sql
(+177 files in other folders)
